--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="container" id="header">
-    <h1 id="title">Chemistry Set</h1>
+    <h1 id="title">CHEMISTRY!</h1>
   </div>
 
 <div class="container" id="game-body">
