--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
    <!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono|Sigmar+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy|Montserrat|Share+Tech+Mono" rel="stylesheet">
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png"/>
     <title>Chemistry Set</title>
 </head>
 <body>
   <div class="container" id="header">
-    <h1 id="title">CHEMISTRY!</h1>
+    <h1 id="title">CHEMISTRY LAB</h1>
   </div>
 
 <div class="container" id="game-body">
