--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy|Montserrat|Share+Tech+Mono" rel="stylesheet">
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png"/>
-    <title>Chemistry Set</title>
+    <title>Chemistry Lab</title>
 </head>
 <body>
   <div class="container" id="header">
